--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,11 +2,44 @@ name: Build
 
 on:
   push:
-  pull_request:
+    branches: [main]
+    paths:
+      - pyproject.toml
   workflow_dispatch:
 
 jobs:
+  check-version:
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.current.outputs.version }}
+      changed: ${{ steps.check.outputs.changed }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
+      - name: Get current version
+        id: current
+        run: |
+          version=$(python3 -c "import tomllib; print(tomllib.load(open('pyproject.toml','rb'))['project']['version'])")
+          echo "version=$version" >> "$GITHUB_OUTPUT"
+
+      - name: Check if version changed
+        id: check
+        run: |
+          prev=$(git show HEAD~1:pyproject.toml 2>/dev/null | python3 -c "import sys,tomllib; print(tomllib.load(sys.stdin.buffer)['project']['version'])" 2>/dev/null || echo "")
+          curr=${{ steps.current.outputs.version }}
+          if [ "$prev" != "$curr" ]; then
+            echo "changed=true" >> "$GITHUB_OUTPUT"
+            echo "Version changed: $prev -> $curr"
+          else
+            echo "changed=false" >> "$GITHUB_OUTPUT"
+            echo "Version unchanged: $curr"
+          fi
+
   build-analytical:
+    needs: check-version
+    if: needs.check-version.outputs.changed == 'true' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -43,6 +76,8 @@ jobs:
           path: vendor/simai/astra-sim-alibabacloud/build/simai_analytical/build/simai_analytical/SimAI_analytical
 
   build-ns3:
+    needs: check-version
+    if: needs.check-version.outputs.changed == 'true' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
@@ -98,7 +133,7 @@ jobs:
 
   build-wheel:
     runs-on: ubuntu-latest
-    needs: [build-analytical, build-ns3]
+    needs: [check-version, build-analytical, build-ns3]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -135,11 +170,17 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: build-wheel
-    if: startsWith(github.ref, 'refs/tags/v')
+    needs: [check-version, build-wheel]
     permissions:
       contents: write
     steps:
+      - uses: actions/checkout@v4
+
+      - name: Create and push tag
+        run: |
+          git tag "v${{ needs.check-version.outputs.version }}"
+          git push origin "v${{ needs.check-version.outputs.version }}"
+
       - name: Download wheel
         uses: actions/download-artifact@v4
         with:
@@ -149,4 +190,5 @@ jobs:
       - name: Create GitHub release
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: v${{ needs.check-version.outputs.version }}
           files: dist/*.whl
