Add GPU profiling support for workload generation
Introduces separate GPU profiling workflow that decouples kernel timing
measurement from workload generation, enabling profile reuse without
requiring GPU access each time.

New features:
- `simai profile gpu` command to profile GPU kernels and save results
- `--compute-profile` flag to load pre-recorded profiles in workload generation
- Monkey-patch optional CUDA libraries (apex, scaled_upper_triang_masked_softmax_cuda, deep_gemm) with PyTorch fallbacks
- Integration test suite covering all profiling modes

Implementation:
- Fixed aiob_enable flag to work with --compute-profile
- Added missing args attributes (computation_enable, epoch_num, pp_rank)
- Graceful fallback to PyTorch implementations when CUDA extensions unavailable

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,12 @@ wheels/
 # Build-time vendored artifacts (populated by hatch_build.py, not tracked)
 src/simai/_vendor/
 src/simai/_binaries/
+
+# Test results
+test_results_*/
+results/
+
+# Slurm job files
+slurm-*.out
+*.sbatch.out
+*.sbatch.err
