--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,8 @@ on:
     branches: [main]
     paths:
       - pyproject.toml
+  pull_request:
+    branches: [main]
   workflow_dispatch:
     inputs:
       force:
@@ -46,7 +48,6 @@ jobs:
     needs: check-version
     if: needs.check-version.outputs.changed == 'true' || inputs.force == true
     runs-on: ubuntu-latest
-    container: quay.io/pypa/manylinux2014_x86_64
     steps:
       - uses: actions/checkout@v4
         with:
@@ -63,19 +64,17 @@ jobs:
           path: vendor/simai/astra-sim-alibabacloud/build/simai_analytical/build/simai_analytical/SimAI_analytical
           key: analytical-manylinux2014-${{ steps.submodule-hash.outputs.hash }}
 
-      - name: Install build dependencies
-        if: steps.cache-analytical.outputs.cache-hit != 'true'
-        run: |
-          yum install -y gcc gcc-c++ cmake3 make
-          ln -sf /usr/bin/cmake3 /usr/bin/cmake || true
-
       - name: Build SimAI_analytical
         if: steps.cache-analytical.outputs.cache-hit != 'true'
         run: |
-          cd vendor/simai/astra-sim-alibabacloud/build/simai_analytical
-          mkdir -p build && cd build
-          cmake -DUSE_ANALYTICAL=TRUE ..
-          make -j$(nproc)
+          docker run --rm -v $PWD:/workspace -w /workspace quay.io/pypa/manylinux2014_x86_64 bash -c "
+            yum install -y gcc gcc-c++ cmake3 make
+            ln -sf /usr/bin/cmake3 /usr/bin/cmake || true
+            cd vendor/simai/astra-sim-alibabacloud/build/simai_analytical
+            mkdir -p build && cd build
+            cmake -DUSE_ANALYTICAL=TRUE ..
+            make -j\$(nproc)
+          "
 
       - name: Upload analytical binary
         uses: actions/upload-artifact@v4
@@ -87,14 +86,6 @@ jobs:
     needs: check-version
     if: needs.check-version.outputs.changed == 'true' || inputs.force == true
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - manylinux_tag: manylinux_2_17_x86_64
-            container: quay.io/pypa/manylinux2014_x86_64
-          - manylinux_tag: manylinux_2_28_x86_64
-            container: quay.io/pypa/manylinux_2_28_x86_64
-    container: ${{ matrix.container }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -109,80 +100,73 @@ jobs:
         uses: actions/cache@v4
         with:
           path: build/ns3-deps
-          key: ns3-${{ matrix.manylinux_tag }}-${{ steps.submodule-hash.outputs.hash }}
+          key: ns3-manylinux2014-${{ steps.submodule-hash.outputs.hash }}
 
-      - name: Install build dependencies
+      - name: Build ns3 in manylinux container
         if: steps.cache-ns3.outputs.cache-hit != 'true'
         run: |
-          yum install -y gcc gcc-c++ cmake3 make libxml2-devel sqlite-devel gsl-devel
-          ln -sf /usr/bin/cmake3 /usr/bin/cmake || true
+          docker run --rm -v $PWD:/workspace -w /workspace quay.io/pypa/manylinux2014_x86_64 bash -c '
+            # Install dependencies
+            yum install -y gcc gcc-c++ cmake3 make libxml2-devel sqlite-devel gsl-devel
+            ln -sf /usr/bin/cmake3 /usr/bin/cmake || true
+            set -e
 
-      - name: Copy ns3 source into extern dir
-        if: steps.cache-ns3.outputs.cache-hit != 'true'
-        run: |
-          mkdir -p vendor/simai/astra-sim-alibabacloud/extern/network_backend/ns3-interface
-          cp -r vendor/simai/ns-3-alibabacloud/* vendor/simai/astra-sim-alibabacloud/extern/network_backend/ns3-interface/
+            # Copy ns3 source
+            mkdir -p vendor/simai/astra-sim-alibabacloud/extern/network_backend/ns3-interface
+            cp -r vendor/simai/ns-3-alibabacloud/* vendor/simai/astra-sim-alibabacloud/extern/network_backend/ns3-interface/
 
-      - name: Build AstraSim library
-        if: steps.cache-ns3.outputs.cache-hit != 'true'
-        run: |
-          cd vendor/simai/astra-sim-alibabacloud/build/astra_ns3
-          mkdir -p build && cd build
-          cmake ..
-          make -j$(nproc)
+            # Build AstraSim library
+            cd vendor/simai/astra-sim-alibabacloud/build/astra_ns3
+            mkdir -p build && cd build
+            cmake ..
+            make -j$(nproc)
 
-      - name: Build ns3
-        if: steps.cache-ns3.outputs.cache-hit != 'true'
-        run: |
-          cd vendor/simai/astra-sim-alibabacloud
-          cp astra-sim/network_frontend/ns3/AstraSimNetwork.cc extern/network_backend/ns3-interface/simulation/scratch/
-          cp astra-sim/network_frontend/ns3/*.h extern/network_backend/ns3-interface/simulation/scratch/
-          rm -rf extern/network_backend/ns3-interface/simulation/src/applications/astra-sim
-          cp -r astra-sim extern/network_backend/ns3-interface/simulation/src/applications/
-          cd extern/network_backend/ns3-interface/simulation
-          ./ns3 configure -d debug --enable-mtp
-          ./ns3 build
+            # Build ns3
+            cd /workspace/vendor/simai/astra-sim-alibabacloud
+            cp astra-sim/network_frontend/ns3/AstraSimNetwork.cc extern/network_backend/ns3-interface/simulation/scratch/
+            cp astra-sim/network_frontend/ns3/*.h extern/network_backend/ns3-interface/simulation/scratch/
+            rm -rf extern/network_backend/ns3-interface/simulation/src/applications/astra-sim
+            cp -r astra-sim extern/network_backend/ns3-interface/simulation/src/applications/
+            cd extern/network_backend/ns3-interface/simulation
+            ./ns3 configure -d debug --enable-mtp
+            ./ns3 build
 
-      - name: Collect runtime shared library dependencies
-        if: steps.cache-ns3.outputs.cache-hit != 'true'
-        run: |
-          NS3_BIN=vendor/simai/astra-sim-alibabacloud/extern/network_backend/ns3-interface/simulation/build/scratch/ns3.36.1-AstraSimNetwork-debug
-          NS3_LIBS=vendor/simai/astra-sim-alibabacloud/extern/network_backend/ns3-interface/simulation/build/lib
-          mkdir -p build/ns3-deps
-          # Copy ns3 binary and its own libs
-          cp "$NS3_BIN" build/ns3-deps/
-          cp "$NS3_LIBS"/libns3* build/ns3-deps/ 2>/dev/null || true
-          # Copy non-standard system library dependencies (skip libc, libm, libpthread, ld-linux, etc.)
-          for lib in $(ldd "$NS3_BIN" 2>/dev/null | grep -oP '/\S+\.so[.\d]*' | sort -u); do
-            case "$(basename "$lib")" in
-              libc.so*|libm.so*|libpthread.so*|libdl.so*|librt.so*|ld-linux*|libstdc++*|libgcc_s*) continue ;;
-            esac
-            cp -L "$lib" build/ns3-deps/ 2>/dev/null || true
-          done
-          # Also check the ns3 shared libs for transitive deps
-          for so in build/ns3-deps/libns3*; do
-            for lib in $(ldd "$so" 2>/dev/null | grep -oP '/\S+\.so[.\d]*' | sort -u); do
+            # Collect dependencies
+            NS3_BIN=build/scratch/ns3.36.1-AstraSimNetwork-debug
+            NS3_LIBS=build/lib
+            mkdir -p /workspace/build/ns3-deps
+            cp "$NS3_BIN" /workspace/build/ns3-deps/
+            cp "$NS3_LIBS"/libns3* /workspace/build/ns3-deps/ 2>/dev/null || true
+
+            for lib in $(ldd "$NS3_BIN" 2>/dev/null | grep -oP "/\S+\.so[.\d]*" | sort -u); do
               case "$(basename "$lib")" in
                 libc.so*|libm.so*|libpthread.so*|libdl.so*|librt.so*|ld-linux*|libstdc++*|libgcc_s*) continue ;;
               esac
-              cp -nL "$lib" build/ns3-deps/ 2>/dev/null || true
+              cp -L "$lib" /workspace/build/ns3-deps/ 2>/dev/null || true
             done
-          done
-          echo "Bundled libraries:"
-          ls -la build/ns3-deps/
+
+            for so in /workspace/build/ns3-deps/libns3*; do
+              for lib in $(ldd "$so" 2>/dev/null | grep -oP "/\S+\.so[.\d]*" | sort -u); do
+                case "$(basename "$lib")" in
+                  libc.so*|libm.so*|libpthread.so*|libdl.so*|librt.so*|ld-linux*|libstdc++*|libgcc_s*) continue ;;
+                esac
+                cp -nL "$lib" /workspace/build/ns3-deps/ 2>/dev/null || true
+              done
+            done
+
+            echo "Bundled libraries:"
+            ls -la /workspace/build/ns3-deps/
+          '
 
       - name: Upload ns3 binary and shared libraries
         uses: actions/upload-artifact@v4
         with:
-          name: SimAI_simulator-${{ matrix.manylinux_tag }}
+          name: SimAI_simulator
           path: build/ns3-deps/
 
   build-wheel:
     runs-on: ubuntu-latest
     needs: [check-version, build-analytical, build-ns3]
-    strategy:
-      matrix:
-        manylinux_tag: [manylinux_2_17_x86_64, manylinux_2_28_x86_64]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -197,7 +181,7 @@ jobs:
       - name: Download ns3 binary and libraries
         uses: actions/download-artifact@v4
         with:
-          name: SimAI_simulator-${{ matrix.manylinux_tag }}
+          name: SimAI_simulator
           path: build/bin
 
       - name: Prepare binaries
@@ -209,17 +193,18 @@ jobs:
         uses: astral-sh/setup-uv@v5
 
       - name: Build wheel
-        run: SIMAI_PLATFORM_TAG=${{ matrix.manylinux_tag }} uv build --wheel
+        run: SIMAI_PLATFORM_TAG=manylinux_2_17_x86_64 uv build --wheel
 
       - name: Upload wheel
         uses: actions/upload-artifact@v4
         with:
-          name: wheel-${{ matrix.manylinux_tag }}
+          name: wheel
           path: dist/*.whl
 
   release:
     runs-on: ubuntu-latest
     needs: [check-version, build-wheel]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       contents: write
     steps:
@@ -230,12 +215,11 @@ jobs:
           git tag "v${{ needs.check-version.outputs.version }}"
           git push origin "v${{ needs.check-version.outputs.version }}"
 
-      - name: Download all wheels
+      - name: Download wheel
         uses: actions/download-artifact@v4
         with:
-          pattern: wheel-*
+          name: wheel
           path: dist
-          merge-multiple: true
 
       - name: Create GitHub release
         uses: softprops/action-gh-release@v2
@@ -246,15 +230,15 @@ jobs:
   publish-pypi:
     runs-on: ubuntu-latest
     needs: [check-version, build-wheel, release]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       id-token: write
     steps:
-      - name: Download all wheels
+      - name: Download wheel
         uses: actions/download-artifact@v4
         with:
-          pattern: wheel-*
+          name: wheel
           path: dist
-          merge-multiple: true
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
