--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -212,9 +212,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y gcc-9 g++-9 cmake unzip
-          # Standalone LibTorch (CXX11 ABI) avoids missing-symbol issues that
-          # arise when using pip-installed torch for C++ builds.
-          wget -q "https://download.pytorch.org/libtorch/cpu/libtorch-cxx11-abi-shared-with-deps-2.2.2%2Bcpu.zip" \
+          # Standalone LibTorch, old (pre-CXX11) ABI to match AstraSim which is
+          # compiled with _GLIBCXX_USE_CXX11_ABI=0 (see astra-sim-alibabacloud/CMakeLists.txt).
+          # Using the CXX11-ABI build causes ABI mismatch on std::string symbols.
+          wget -q "https://download.pytorch.org/libtorch/cpu/libtorch-shared-with-deps-2.2.2%2Bcpu.zip" \
                -O libtorch.zip
           unzip -q libtorch.zip -d /opt
           echo "LIBTORCH_DIR=/opt/libtorch" >> "$GITHUB_ENV"
